tests/NormalTests/paczka1/small_fuzzy/52028459.err
Error in line 1: mw8DP8mdS4L S647 4,5
Error in line 2: dDl0 S647 87,6
Error in line 9: 6O4XCnE S846 69,6
Error in line 14: qzM S647 78,0
